--- a/style.css
+++ b/style.css
@@ -3950,7 +3950,7 @@ body {
   width: 100%;
   height: 9px;
   border-radius: 20px;
-  background-color: #fbbe35;
+  background-color: #00FFFF;
 }
 
 .number {
